오늘은 여기 까지

--- a/WebContent/writer.html
+++ b/WebContent/writer.html
@@ -8,11 +8,23 @@
 <script type="text/javascript" src="js/raphael.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-<script type="text/javascript" src="js/writer.js"></script>
 
+<script type="text/javascript" src="js/writer.js"></script>
+<script type="text/javascript" src="js/calc.js"></script>
+<script type="text/javascript" src="js/function.js"></script>
+<script type="text/javascript" src="js/eventRegist.js"></script>
+<script type="text/javascript" src="js/eventHandler.js"></script>
 </head>
 <body>
-	<button id="crtBtn">네모상자</button>
+	<input id="x" type="number"/>
+	<input id="y" type="number"/>
+	<input id="width" type="number"/>
+	<input id="height" type="number"/>
+	<button id="crtBtn">사각형하나!!</button><br>
+	
+	<input id="radius" type="number"/>
+	<button id="rotateBtn">회전!!</button>
+	
 	<div id="editor"></div>
 	<div id="footer">
 	여기는 풋터 1!!!!!!!<br>여기는 풋터 1!!!!!!!<br>여기는 풋터 1!!!!!!!<br>여기는 풋터 1!!!!!!!<br>
