--- a/WebContent/writer.html
+++ b/WebContent/writer.html
@@ -14,6 +14,7 @@
 <script type="text/javascript" src="js/function.js"></script>
 <script type="text/javascript" src="js/eventRegist.js"></script>
 <script type="text/javascript" src="js/eventHandler.js"></script>
+<script type="text/javascript" src="js/Coordinate.js"></script>
 </head>
 <body>
 	<input id="x" type="number"/>
