collision detect 성공

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -20,6 +20,7 @@
 
 <script type="text/javascript" src="js/snap.svg.zpd.js"></script>
 <script type="text/javascript" src="js/calc.js"></script>
+<script type="text/javascript" src="js/Coordinate.js"></script>
 <script type="text/javascript" src="js/function.js"></script>
 <script type="text/javascript" src="js/eventRegist.js"></script>
 <script type="text/javascript" src="js/eventHandler.js"></script>
