--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -134,9 +134,9 @@
       			<input type="text" name="planName" id="planName" placeholder='배치도 이름을 입력해주세요' class="ui-widget-content ui-corner-all" required>
       			<br><br>
       			<label for="tab_title">방의 크기</label><br>
-      			<input type="text" name="planWidth" id="planWidth" placeholder='방의 가로길이를 입력해주세요' class="ui-widget-content ui-corner-all" required>
-      			<input type="text" name="planHeight" id="planHeight" placeholder='방의 세로길이를 입력해주세요' class="ui-widget-content ui-corner-all" required>
-      			<input type="text" name="planLength" id="planLength" placeholder='방의 높이를 입력해주세요' class="ui-widget-content ui-corner-all" required>
+      			<input type="number" name="planWidth" id="planWidth" placeholder='방의 가로길이를 입력해주세요' class="ui-widget-content ui-corner-all" required>
+      			<input type="number" name="planHeight" id="planHeight" placeholder='방의 세로길이를 입력해주세요' class="ui-widget-content ui-corner-all" required>
+      			<input type="number" name="planLength" id="planLength" placeholder='방의 높이를 입력해주세요' class="ui-widget-content ui-corner-all" required>
     		</fieldset>
   		</form>
 	</div>
