--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -82,11 +82,11 @@
 					<div id="rightToggle">
 						<button id="rightToggleBtn">></button>
 					</div>
-					<div id="tabs">
+					<div id="rightTabs">
 						<ul>
-							<li><a href="#tab1">옷장</a></li>
-							<li><a href="ajax/content1.html">침대</a></li>
-							<li><a href="ajax/content2.html">식탁</a></li>
+							<li><a href="#tab-products">가구목록</a></li>
+							<li><a href="#tab-wishlist">찜목록</a></li>
+							<li><a href="#tab-furnitures">배치목록</a></li>
  						</ul>
 						<div id="tab1" class="tabContent">
 							<div class="productWrap">
